            ----------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

27 May 2014 V. Ivantchenko (hadr-stopping-V09-06-13)
--------------------------------------------------------------------
- G4MuonMinusCaptureAtRest, G4AntiNeutronAnnihilationAtRest -
    fixed Coverity defects

14 May 2014 V. Ivantchenko
--------------------------
- G4MuMinusCapturePrecompound - added simplified model for capture
    in deuterium and in He4; reduced number of trials to find neutrino
    4-momentum from 1000 to 100; added protection 1 keV for negative
    excitation energy, substitute FatalException by JustWarning.
    All this addressing the recent ATLAS report 

31 January 2014 V. Ivantchenko (hadr-stopping-V09-06-12)
--------------------------------------------------------------------
- G4MuMinusCapturePrecompound - fix infonite loop (bug #1536) by 
    reimplementing old algorithm of mu- capture which not include
    direct muon reaction but only considering deexcitation of
    residual fragment

08 Nov   2013 A. Ribon       (hadr-stopping-V09-06-11)
--------------------------------------------------------------------
- Updated GNUmakefile and sources.cmake to reflect removal of HE
  hadronic models.

03 Oct   2013 K. Genser      (hadr-stopping-V09-06-10)
--------------------------------------------------------------------
- G4MuonMinusCapture.cc
  Replaced native PreCompound model with Bertini
  (G4MuMinusCapturePrecompound with G4CascadeInterface)

16 July  2013 G. Cosmo       (hadr-stopping-V09-06-09)
--------------------------------------------------------------------
- Correction to CMake scripts for granular build.

04 June  2013 A. Ribon       (hadr-stopping-V09-06-08)