@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+08 December 2014 V. Ivantchenko (hadr-stopping-V09-06-14)
+--------------------------------------------------------------------
+- G4HadronStoppingProcess, G4MuonMinusBoundDecay: fixed time of muon 
+    nuclear capture secondaries (fix #1695).
+
 27 May 2014 V. Ivantchenko (hadr-stopping-V09-06-13)
 --------------------------------------------------------------------
 - G4MuonMinusCaptureAtRest, G4AntiNeutronAnnihilationAtRest -
